--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Build
+        run: echo ${{ github.sha }} > Release.txt
       - name: Release
         uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            Release.txt
+            LICENSE
