--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          body: "Automatic Release..."
           files: |
             Release.txt
             LICENSE
