--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run: echo ${{ github.sha }} > Release.txt
+      - name: ReleaseNotes
+        run: git log $(git describe --tags ${{github.ref}}^)..HEAD --pretty=format:'%h - %s' > ${{ github.workspace }}-CHANGELOG.txt
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          body: "Automatic Release..."
+#          body: "Automatic Release..."
+          body_path: ${{ github.workspace }}-CHANGELOG.txt
           files: |
             Release.txt
+            ${{ github.workspace }}-CHANGELOG.txt
             LICENSE
