--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run: echo ${{ github.sha }} > Release.txt
+      - name: Last Release
+        run: git describe --tags
       - name: ReleaseNotes
         run: git log $(git describe --tags ${{github.ref_name}}^)..HEAD --pretty=format:'%h - %s' > ${{ github.workspace }}-CHANGELOG.txt
       - name: Release
