--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         run: echo ${{ github.sha }} > Release.txt
       - name: Last Release
         run: git describe --tags
+      - name: Last Release 2
+        run: git describe --tags ${{ github.ref_name }}^
       - name: ReleaseNotes
         run: git log $(git describe --tags ${{github.ref_name}}^)..HEAD --pretty=format:'%h - %s' > ${{ github.workspace }}-CHANGELOG.txt
       - name: Release
