--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run: echo ${{ github.sha }} > Release.txt
+      - name: Logs
+        run: git log HEAD~10 --pretty=format='%h - %s' > foobar.txt
+      - name: Cat Logs
+        run: cat foobar.txt
       - name: Last Release
         run: git describe --tags
       - name: Last Release 2
@@ -26,7 +30,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
 #          body: "Automatic Release..."
-          body_path: ${{ github.workspace }}-CHANGELOG.txt
+          body_path: foobar.txt
           files: |
             Release.txt
             ${{ github.workspace }}-CHANGELOG.txt
