--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 100
+      - name: Get tags
+        run: git fetch --tags origin
       - name: Build
         run: echo ${{ github.sha }} > Release.txt
       - name: Logs
